# CodeSamples

SceneGridTest/: SceneGridTest.pro  bfsfinder.cpp  bfsfinder.h  graphicsscene.h  main.cpp  mainwindow.cpp  mainwindow.h  squareitem.cpp  squareitem.h  typedefs.h  variables.cpp  variables.h
SceneGridTestSnake/: SceneGridTestSnake.pro  arbiter.cpp  arbiter.h  bfsfinder.cpp  bfsfinder.h  dbmanager.cpp  dbmanager.h  graphicsscene.cpp  graphicsscene.h  graphicsview.cpp  graphicsview.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  snakeitem.cpp  snakeitem.h  snakelogick.cpp  snakelogick.h  squareitem.h  typedefs.h  Тестовое задание (НПП Адвент).docx
SerialFileSenderTest/: SerialFileSenderTest.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  messagestructure.h  sender.cpp  sender.h  serializer.cpp  serializer.h  settingsstructure.h  smartbuffer.cpp  smartbuffer.h  testmessagegenerator.cpp  testmessagegenerator.h
Shared_memory_ClientServer/ShmClient/: CMakeLists.txt  ShmClient.pro  client_transport.cpp  client_transport.h  concrete_client_sender.cpp  concrete_client_sender.h  config.cpp  config.h  macro_defines.h  main.cpp  shmcircularbuffer.cpp  shmcircularbuffer.h  test.xml
Shared_memory_ClientServer/ShmServer/: CMakeLists.txt  ShmServer.pro  concrete_client_receiver.cpp  concrete_client_receiver.h  main.cpp  mainwindow.cpp  mainwindow.h  messagestructures.h  server_transport.cpp  server_transport.h  shmcircularbuffer.cpp  shmcircularbuffer.h
SnakeGame/: SnakeGame.pro  mainwindow.cpp  mainwindow.h  scorefield.cpp  scorefield.h  snakegame.cpp  snakegame.h
logManager/: logManager.pro  logmanager.cpp  logmanager.h  main.cpp
plotCalculation/: chart.cpp  chart.h  functioncalculator.cpp  functioncalculator.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  (+9 more)
testProxyEpoll/: CMakeLists.txt  README  common.h  handler.cpp  handler.h  logger.cpp  logger.h  main.cpp  parser.cpp  parser.h  server.cpp  server.h  Тестовое задание Программист С++ (1).docx
testProxyEpoll/generator/: gnu_parallel_test_proxy.sh  psql_base_conf.sh
(+39 files in other folders)
